Final edits to affiliations and references.

--- a/references.bib
+++ b/references.bib
@@ -371,7 +371,9 @@ archivePrefix = "arXiv",
 	Author = {{Dieleman}, S. and {De Fauw}, J. and {Kavukcuoglu}, K.},
 	Journal = {International Conference on Machine Learning (ICML)},
 	Title = {{Exploiting Cyclic Symmetry in Convolutional Neural Networks}},
-	Year = 2016}
+	Year = 2016,
+	volume=48,
+	pages=1889-1898}
 
 @article{Fukushima1980,
 	Author = {Fukushima, Kunihiko},
@@ -409,16 +411,19 @@ archivePrefix = "arXiv",
 
 @article{batch_norm,
 	Author = {{Ioffe}, S. and {Szegedy}, C.},
-	Journal = {Journal of Machine Learning Research},
+	Journal = {Proceedings of Machine Learning Research},
 	Month = feb,
 	Title = {{Batch Normalization: Accelerating Deep Network Training by Reducing Internal Covariate Shift}},
-	Year = 2015}
+	Year = 2015.
+	Volume=37,
+	Pagea=448-456}
 
 @article{adam,
 	Author = {{Kingma}, D.~P. and {Ba}, J.},
-	Journal = {International Conference on Learning Representations},
+	Journal = {3rd International Conference on Learning Representations (ICLR)},
 	Title = {{Adam: A Method for Stochastic Optimization}},
-	Year = 2015}
+	Year = 2015,
+	}
 
 @article{dropout,
 	Author = {Nitish Srivastava and Geoffrey Hinton and Alex Krizhevsky and Ilya Sutskever and Ruslan Salakhutdinov},
